--- a/Sube2.HelloMvc/appsettings.json
+++ b/Sube2.HelloMvc/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ANIL;Initial Catalog=OkulDbSube2MVC;Integrated Security=true;TrustServerCertificate=true;"
+  },
   "AllowedHosts": "*"
 }
+
+
+
